[package]
name = "bazel_integration"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
flate2 = "1.0.22"
pathdiff = "0.2.1"
tar = "0.4.38"
tempfile = "3.3.0"
walkdir = "2.3.2"
