[package]
name = "cargo-bazel"
version = "0.0.14"
authors = [
    "Andre Brisco - andre.brisco@protonmail.com",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
cargo_metadata = "0.14.1"
cargo_toml = "0.10.1"
cargo-lock = "7.0.1"
cargo-platform = "0.1.2"
cfg-expr = "0.9.0"
crates-index = { version = "0.18.1", default-features = false }
hex = "0.4.3"
pathdiff = "0.2.1"
regex = "1.5.4"
semver = "1.0.4"
serde = "1.0.131"
serde_json = "1.0.72"
sha2 = "0.10.0"
structopt = "0.3.25"
tera = "1.15.0"
textwrap = "0.14.2"
toml = "0.5.8"

[dev-dependencies]
tempfile = "3.2.0"
