[package]
name = "cargo-bazel"
version = "0.0.19"
authors = [
    "Andre Brisco - andre.brisco@protonmail.com",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
cargo_metadata = "0.14.1"
# https://gitlab.com/crates.rs/cargo_toml/-/merge_requests/9
cargo_toml = { git = "https://gitlab.com/UebelAndre/cargo_toml.git", rev = "6fb3bbcafdf80ce3ad3c4d65a2b80c16f70f1ca7" }
cargo-lock = "7.0.1"
cargo-platform = "0.1.2"
cfg-expr = "0.9.0"
clap = { version = "3.0.0", features = ["derive", "env"] }
crates-index = { version = "0.18.1", default-features = false }
hex = "0.4.3"
pathdiff = "0.2.1"
regex = "1.5.4"
semver = "1.0.4"
serde = "1.0.132"
serde_json = "1.0.73"
sha2 = "0.10.0"
tera = "1.15.0"
textwrap = "0.14.2"
toml = "0.5.8"

[dev-dependencies]
tempfile = "3.2.0"
