exports_files(
    ["Cargo.toml"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "distro",
    srcs = [
        "BUILD.bazel",
        "Cargo.toml",
    ],
    visibility = ["//tools:__pkg__"],
)

filegroup(
    name = "srcs",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//:__subpackages__"],
)
