load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "urls_generator",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    compile_data = [
        "//private:urls.bzl",
    ],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    rustc_env = {
        "MODULE_ROOT_PATH": "$(rootpath //private:urls.bzl)",
    },
    deps = all_crate_deps(normal = True),
)
