[package]
name = "urls_generator"
version = "0.1.0"
authors = [
    "UebelAndre - github@uebelandre.com",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "0.3.24"
serde_json = "1.0.68"
sha2 = "0.9.8"
structopt = "0.3.23"
