[package]
name = "urls_generator"
version = "0.1.0"
authors = [
    "UebelAndre - github@uebelandre.com",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0"
hex = "0.4.3"
serde_json = "1.0.73"
sha2 = "0.10.0"
