[package]
name = "pkg_a"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls", "blocking", "json"] }

[dev-dependencies]
httpmock = "0.6.2"
# The direct `curl-sys` dependency is used to enable the rustls features in the
# transitive `curl-sys` dependency of `httpmock`.
curl-sys = { version = "0.4.52", default-features = false, features = ["rustls"] }
